--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </nav>
     <div class="row" id="inicio">
-        <div class="col-md-6"><img class="img-avatar" src="./imagenes/avataaars.svg" alt=""></div>
+        <div class="x"><img class="img-avatar" src="./imagenes/avataaars.svg" alt=""></div>
         <h2>START BOOTSTRAP</h2>
         <div class="l-separacion">
             <img src="./imagenes/linea1.png" alt="linea">
