--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
       </nav>
-    <div class="row" id="inicio" style="background-color: red;">
+    <div class="row" id="inicio">
         <div class="x"><img class="img-avatar" src="./imagenes/avataaars.svg" alt=""></div>
         <h2>START BOOTSTRAP</h2>
         <div class="l-separacion">
@@ -77,7 +77,7 @@
                 <div class="img6"></div>           
         </div>
 </div>
-<section class="c-about"  id="about" style="background-color: rgb(255, 0, 255);">
+<section class="c-about"  id="about">
     <div class="container">
         <h2 class="about">ABOUT</h2>
         <div class="l-separacion">
@@ -99,7 +99,7 @@
     </div>
 </section>
 <section>
-    <div class="container" id="contact" style="background-color: rgb(255, 255, 0);">
+    <div class="container" id="contact">
         <h2 class="contact">CONTACT</h2>
         <div class="l-separacion">
             <img src="./imagenes/linea1.png" alt="linea">
@@ -129,7 +129,7 @@
         </div>
     </div>
 </section>
-<footer class="footer" style="background-color: rgb(0, 217, 255);">
+<footer class="footer">
     <div class="container" id="location">
         <div class="offset-md-1">
             <h4>Location</h4>
