--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <p class="subtittle-star">Graphic Artist - Web Designer - Illustrator</p>
     </div>
-<div class="container" id="portafolio" style="background-color: lightgreen;">
+<div class="container" id="portafolio">
     <h3 class="portafolio">PORTAFOLIO</h3>
         <div class="l-separacion">
             <img src="./imagenes/linea1.png" alt="linea">
