--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             <img src="./imagenes/linea1.png" alt="linea">
         </div>
         <div class="row">
-            <div class="col-md-4 offset-md-2">
-                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+            <div class="col-sm-6 col-md-4 col-lg-4 offset-md-2">
+                <p class="parrafo">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
             </div>
-            <div class="col-md-4">
-                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+            <div class="col-sm-6 col-md-4 col-lg-4">
+                <p class="parrafo">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
             </div>
             <div class="boton-a">
                     <button class="descarga"><img class="img-descarga" src="./imagenes/descarga.png" alt="">Free Download!</button>
@@ -132,8 +132,8 @@
 <footer class="footer">
     <div class="container" id="location">
         <div class="offset-md-1">
-            <h4>Location</h4>
-            <p>Santiago Ibañez
+            <h4 class="hhhh">Location</h4>
+            <p class="parrafo-f">Santiago Ibañez
             <br>
             calle 100 sur
             </p>
@@ -141,8 +141,7 @@
     </div>
     <div class="container" id="arround">
         <div class="offset-md-1">
-            <h4>AROUND THE WEB</h4>
-            <br>
+            <h4 class="hhhh">AROUND THE WEB</h4>
             <a href="https://www.instagram.com" target="_blank"><img class="img-redes" src="./imagenes/redes sociales/instagram.png" alt=""></a>
             <a href="https://www.twitter.com" target="_blank"><img class="img-redes" src="./imagenes/redes sociales/twitter.png" alt=""></a>
             <a href="https://www.facebook.com" target="_blank"><img class="img-redes" src="./imagenes/redes sociales/facebok.png" alt=""></a>
@@ -151,8 +150,8 @@
     </div>
     <div class="container" id="freelancer">
         <div class="offset-md-1">
-            <h4>ABOUT FREELANCER</h4>
-            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a class="enlace" href="http://startbootstrap.com">Start Bootstrap</a></p>
+            <h4 class="hhhh">ABOUT FREELANCER</h4>
+            <p class="parrafo-f">Freelance is a free to use, MIT licensed Bootstrap theme created by <a class="enlace" href="http://startbootstrap.com">Start Bootstrap</a></p>
         </div>
     </div>
 </footer>
@@ -161,5 +160,6 @@
         <small>Copyright © Your Website 2023</small>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
